# SnakeGame-SDL

./: CMakeLists.txt  main.cpp
cmake/: FindSDL2.cmake
